2010-12-10 Malignant Manor <malignantmanor@users.sourceforge.net>
	* schedule.*: Added checks in Talk_schedule::now_what so the npcs doesn't item_say if the
		Avatar is unreachable. Changed costs in baking schedule to help prevent failures.
		Changed baking schedule so that the display table is cleared of food before getting full.
		It needs some further pathfinding added to each food item cleared since it currently only
		walks to the table.
		
2010-12-09 Malignant Manor <malignantmanor@users.sourceforge.net>
	* actors.cc, gamewin.*, objs/eggs.cc, usecode/intrinsics.cc: Added a check
		to make sure party members don't teleport with teleport_party if paralyzed, or asleep.
		Added an optional parameter for teleport_party, teleport_to_saved_pos, move_object,
		and recall_virtue_stone to override the check. Teleport cheats don't use the check.
		Changed Actor::follow so that paralyzed or asleep actors don't follow. This fixes bug #2799398.
	* added  cmanip.exe, mockup.exe, smooth.exe, and u7voice2syx.exe to the trunk's svn:ignore

2010-12-09 Malignant Manor <malignantmanor@users.sourceforge.net>
	* schedule.cc: Make more schedule created items temporary
	* added Exult.exe to the trunk's svn:ignore

2010-12-09 Dominik Reichardt <dominus@users.sourceforge.net>
	* paths.cc: fixed talking through locked doors. If NPCs can't pathfind to you, no conversation (thanks to Malignant Manor)
	* actors.cc, gumps/Face_stats.cc: applied highlight patch #3132882 to match the order with the original (also thanks to Malignant Manor)
	
2010-12-06 Dominik Reichardt <dominus@users.sourceforge.net>
	* data/si/autonotes.txt, content/sifixes/src/header/si/si_gflags.uc: corrections 
	  about some flags set when talking to Harnna

2010-11-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs/spellbook.cc: fix mana cost check (thanks malignantmanor; #3001287)
	* actors.cc: don't make dying party members call guards
	  (thanks malignantmanor; #3011711)
